# CHIP8_Interpreter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.md  chip8  chip8.cpp  chip8.h  cmake_install.cmake  gui.cpp  gui.h  imgui.ini  main.cpp
lib/: libSDL2-2.0.0.dylib
roms/: t.rom
